tests/paczka1/small_fuzzy/93557461.err
Error in line 4: DFFK9YGN A650 97,2
Error in line 9: lqB A650 59,2
